Final refactor of terrain from me