@@ -23,24 +23,15 @@ import java.util.List;
  * TerrainResource class to store all possible tiles and their edge tiles.
  */
 public class TerrainResource {
-    private List<Tile> forestTiles;
-    private List<Tile> waterTiles;
-    private List<Tile> airTiles;
-    private List<Tile> fogTiles;
+    private static final List<Tile> forestTiles = new ArrayList<>();
+    private static final List<Tile> waterTiles = new ArrayList<>();
+    private static final List<Tile> airTiles = new ArrayList<>();
+    private static final List<Tile> fogTiles = new ArrayList<>();
 
-    // total number of each tile
-    public static int forestSize = 0;
-    public static int waterSize = 0;
-    public static int airSize = 0;
-    public static int fogSize = 0;
     private boolean unlockedWater;
 
     public TerrainResource(MapHandler.MapType mapType) {
         ResourceService resourceService = ServiceLocator.getResourceService();
-        forestTiles = new ArrayList<>();
-        waterTiles = new ArrayList<>();
-        airTiles = new ArrayList<>();
-        fogTiles = new ArrayList<>();
         this.unlockedWater = false;
         switch (mapType) {
             case FOREST:
@@ -54,7 +45,6 @@ public class TerrainResource {
                                     new TextureRegion(resourceService.getAsset(tile.fp, Texture.class)),
                                     tile.edges, tile.centre));
                 }
-                forestSize = forestTiles.size();
 
                 // load water tiles
                 OceanMapTiles oceanTileConfig;
@@ -68,7 +58,6 @@ public class TerrainResource {
                             tile.edges,
                             tile.centre));
                 }
-                waterSize = waterTiles.size();
 
                 // load fog tiles
                 for (FogTileConfig tile : fogTileConfig.fogTiles) {
@@ -77,7 +66,6 @@ public class TerrainResource {
                             tile.edges,
                             tile.centre));
                 }
-                fogSize = fogTiles.size();
 
                 break;
             case COMBAT:
@@ -92,54 +80,48 @@ public class TerrainResource {
     }
 
     public List<Tile> getMapTiles(MapHandler.MapType mapType) {
-        switch (mapType) {
-            case FOREST:
-                return forestTiles;
-            case WATER:
-                return waterTiles;
-            case AIR:
-                return airTiles;
-            case FOG:
-                return fogTiles;
-            case COMBAT:
-                return null;
-            default:
-                throw new IllegalArgumentException("No such map type:" + mapType);
-        }
+        return switch (mapType) {
+            case FOREST -> forestTiles;
+            case WATER -> waterTiles;
+            case AIR -> airTiles;
+            case FOG -> fogTiles;
+            case COMBAT -> null;
+            default -> throw new IllegalArgumentException("No such map type:" + mapType);
+        };
     }
 
     /**
      * Set all possible tiles for each tile for all directions.
      */
     public void setPossibleTiles() {
-        for (int i = 0; i < this.forestTiles.size(); i++) {
-            setPossibleUp(this.forestTiles.get(i), this.forestTiles);
-            setPossibleRight(this.forestTiles.get(i), this.forestTiles);
-            setPossibleDown(this.forestTiles.get(i), this.forestTiles);
-            setPossibleLeft(this.forestTiles.get(i), this.forestTiles);
+        for (int i = 0; i < forestTiles.size(); i++) {
+            setPossibleUp(forestTiles.get(i), forestTiles);
+            setPossibleRight(forestTiles.get(i), forestTiles);
+            setPossibleDown(forestTiles.get(i), forestTiles);
+            setPossibleLeft(forestTiles.get(i), forestTiles);
         }
 
-        for (int i = 0; i < this.waterTiles.size(); i++) {
-            setPossibleUp(this.waterTiles.get(i), this.waterTiles);
-            setPossibleRight(this.waterTiles.get(i), this.waterTiles);
-            setPossibleDown(this.waterTiles.get(i), this.waterTiles);
-            setPossibleLeft(this.waterTiles.get(i), this.waterTiles);
+        for (int i = 0; i < waterTiles.size(); i++) {
+            setPossibleUp(waterTiles.get(i), waterTiles);
+            setPossibleRight(waterTiles.get(i), waterTiles);
+            setPossibleDown(waterTiles.get(i), waterTiles);
+            setPossibleLeft(waterTiles.get(i), waterTiles);
         }
 
-        for (int i = 0; i < this.fogTiles.size(); i++) {
-            setPossibleUp(this.fogTiles.get(i), this.fogTiles);
-            setPossibleRight(this.fogTiles.get(i), this.fogTiles);
-            setPossibleDown(this.fogTiles.get(i), this.fogTiles);
-            setPossibleLeft(this.fogTiles.get(i), this.fogTiles);
+        for (int i = 0; i < fogTiles.size(); i++) {
+            setPossibleUp(fogTiles.get(i), fogTiles);
+            setPossibleRight(fogTiles.get(i), fogTiles);
+            setPossibleDown(fogTiles.get(i), fogTiles);
+            setPossibleLeft(fogTiles.get(i), fogTiles);
         }
     }
 
     public static int getTileSize(TileLocation location) {
         switch (location) {
-            case FOREST -> {return forestSize;}
-            case WATER -> {return waterSize;}
-            case AIR -> {return waterSize;}
-            case FOG -> {return fogSize;}
+            case FOREST -> {return forestTiles.size();}
+            case WATER -> {return waterTiles.size();}
+            case AIR -> {return airTiles.size();}
+            case FOG -> {return fogTiles.size();}
             default -> throw new IllegalArgumentException("Given tile location doesn't exist!");
         }
     }
@@ -152,7 +134,7 @@ public class TerrainResource {
     public void setPossibleUp(Tile tile, List<Tile> areaTiles) {
         BitSet up = new BitSet(areaTiles.size());
         for (int i = 0; i < areaTiles.size(); i++) {
-            if (areaTiles.get(i).getEdgeTiles().get(2).equals(tile.getEdgeTiles().get(0))) {
+            if (areaTiles.get(i).getEdgeTiles().get(2).equals(tile.getEdgeTiles().getFirst())) {
                 up.set(i, true);
             }
         }
@@ -182,7 +164,7 @@ public class TerrainResource {
     public void setPossibleDown(Tile tile, List<Tile> areaTiles) {
         BitSet down = new BitSet(areaTiles.size());
         for (int i = 0; i < areaTiles.size(); i++) {
-            if (areaTiles.get(i).getEdgeTiles().get(0).equals(tile.getEdgeTiles().get(2))) {
+            if (areaTiles.get(i).getEdgeTiles().getFirst().equals(tile.getEdgeTiles().get(2))) {
                 down.set(i, true);
             }
         }
@@ -212,19 +194,15 @@ public class TerrainResource {
      * @return The tile with the given index and map type
      */
     public Tile getMapTilebyIndex(int index, MapHandler.MapType mapType) {
-        switch (mapType) {
-            case FOREST:
-                return forestTiles.get(index);
-            case FOG:
-                return fogTiles.get(index);
-            case WATER:
-                return waterTiles.get(index);
-            case AIR:
-                return airTiles.get(index);
-            case COMBAT:
-                return null;
-            default:
-                throw new IllegalArgumentException("No such map type:" + mapType);
-        }
+        return switch (mapType) {
+            case FOREST -> forestTiles.get(index);
+            case FOG -> fogTiles.get(index);
+            case WATER -> waterTiles.get(index);
+            case AIR -> airTiles.get(index);
+            case COMBAT -> null;
+            default -> throw new IllegalArgumentException("No such map type:" + mapType);
+        };
     }
+
+    public boolean hasUnlockedWater() {return unlockedWater;}
 }
